--- a/_posts/2018-04-01-setting-up-ivona-text-to-speech-engine-on-android-mobile.html
+++ b/_posts/2018-04-01-setting-up-ivona-text-to-speech-engine-on-android-mobile.html
@@ -18,7 +18,7 @@ categories:
 ---
 
 <div id="outline-container-org469db0c" class="outline-2">
-<h2 id="org469db0c"><span class="todo TODO">TODO</span> How to use Ivona TTS (Text To Speech) on Android</h2>
+<h2 id="org469db0c">How to use Ivona TTS (Text To Speech) on Android</h2>
 <div class="outline-text-2" id="text-org469db0c">
 <ol class="org-ol">
 <li><p>
