--- a/_posts/2018-04-01-setting-up-ivona-text-to-speech-engine-on-android-mobile.html
+++ b/_posts/2018-04-01-setting-up-ivona-text-to-speech-engine-on-android-mobile.html
@@ -219,11 +219,16 @@ Go back to the <code>Ivona Kendra</code> application and you can then click <cod
 </p>
 </div></li>
 </ol>
+</div>
+</div>
 
 
+<div id="outline-container-org915b84d" class="outline-2">
+<h2 id="org915b84d">This completes the installation of the Ivona TTS, you can install any TTS application and direct it to use this voice.</h2>
+<div class="outline-text-2" id="text-org915b84d">
 <ol class="org-ol">
 <li><p>
-This completes the installation of the Ivona TTS, you can install any TTS application and direct it to use the voice. Open <code>Google Play</code> and install <code>@Voice</code> application.
+Open <code>Google Play</code> and install <code>@Voice</code> application.
 </p>
 
 <div class="figure">
@@ -241,7 +246,7 @@ This completes the installation of the Ivona TTS, you can install any TTS applic
 </div></li>
 
 <li><p>
-TODO TEXT
+<code>@Voice</code> GUI looks like
 </p>
 
 <div class="figure">
